Departments Page
Changes to improve the speed of populating the departments page.